class-name_improvement

--- a/app/assets/stylesheets/_chat-main.scss
+++ b/app/assets/stylesheets/_chat-main.scss
@@ -72,7 +72,7 @@
     height: 90px;
     padding: 20px 40px;
 
-    .message {
+    .new_message {
       padding: 0 44px 0 10px;
       width: calc(100vw - 495px);
       height: 50px;
