--- a/app/views/messages/_chat-main.html.haml
+++ b/app/views/messages/_chat-main.html.haml
@@ -12,7 +12,7 @@
     = render "message"
     = render "message"
   .form
-    %input.message{placeholder: "type a message"}
+    %input.new_message{placeholder: "type a message"}
       %label{class: "image"}
         = icon('far', 'image')
         %input{type: "file"}
