--- a/app/views/messages/_chat-main.html.haml
+++ b/app/views/messages/_chat-main.html.haml
@@ -5,7 +5,7 @@
       %ul.main-header__member-list
         member :
         %li.main-header__member-list__member daimar
-    %a{ href: '#'}
+    = link_to "#" do
       .main-header__edit Edit
   .messages
     = render "message"
