--- a/app/views/messages/_group.html.haml
+++ b/app/views/messages/_group.html.haml
@@ -1,4 +1,4 @@
-%a{ href: '#'}
+= link_to "#" do
   .group
     .group__group-name techcamp
     .group__latest-message まだメッセージがありませんaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
