--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,5 +2,6 @@
 @import "modules/messages";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "mixin";
 @import "chat-side";
 @import "chat-main";
