--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,10 @@
 @import "reset";
+@import "config/colors";
 @import "modules/messages";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "mixin";
+@import "mixins";
 @import "chat-side";
 @import "chat-main";
+@import "modules/user";
+@import "modules/flash";
