--- a/app/views/messages/_chat-side.html.haml
+++ b/app/views/messages/_chat-side.html.haml
@@ -1,14 +1,15 @@
 .chat-side
   .side-header
     .side-header__box
-      %p.side-header__box__user-name daimar
+      %p.side-header__box__user-name
+        = current_user.name
       %ul.side-header__box__menu
         %li.side-header__box__menu__new-group
           = link_to "#" do
-            %i.far.fa-edit
+            = icon('far', 'edit', class: 'icon')
         %li.side-header__box__menu__edit-user
-          = link_to "#" do
-            %i.fa.fa-cog
+          = link_to edit_user_path(current_user) do
+            = icon('fa', 'cog', class: 'icon')
   .groups
     = render "group"
     = render "group"
