--- a/app/views/messages/_chat-side.html.haml
+++ b/app/views/messages/_chat-side.html.haml
@@ -5,12 +5,16 @@
         = current_user.name
       %ul.side-header__box__menu
         %li.side-header__box__menu__new-group
-          = link_to "#" do
+          = link_to new_group_path do
             = icon('far', 'edit', class: 'icon')
         %li.side-header__box__menu__edit-user
           = link_to edit_user_path(current_user) do
             = icon('fa', 'cog', class: 'icon')
   .groups
-    = render "group"
-    = render "group"
-    = render "group"
+    - current_user.groups.each do |group|
+      .group
+        = link_to '#' do
+          .group__name
+            = group.name
+          .group__latest-message
+            メッセージはまだありません。
