--- a/app/views/messages/_chat-main.html.haml
+++ b/app/views/messages/_chat-main.html.haml
@@ -1,19 +1,22 @@
 .chat-main
   .main-header
     .main-header__left
-      %p.main-header__group-name グループ名
+      %p.main-header__group-name
+        = @group.name
       %ul.main-header__member-list
         member :
-        %li.main-header__member-list__member daimar
-    = link_to "#" do
+        %li.main-header__member-list__member
+          - @group.users.each do |user|
+            = user.name
+    = link_to "edit" do
       .main-header__edit Edit
   .messages
-    = render "message"
-    = render "message"
-    = render "message"
+    = render @messages
   .form
-    %input.new_message{placeholder: "type a message"}
-      %label{class: "image"}
-        = icon('far', 'image')
-        %input{type: "file"}
-    %input.submit-btn{type: "submit", value: "Send"}
+    = form_for [@group, @message] do |f|
+      = f.text_field :content, class: 'input-box', placeholder: 'type a message'
+      .form__mask
+        = f.label :image, class: 'form__mask__image' do
+          = icon('far', 'image', class: 'icon')
+          = f.file_field :image, class: 'hidden'
+      = f.submit 'Send', class: 'submit-btn'
