--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,11 @@
 .message
-  %p.message__user daimar
-  %p.message__date 2020/4/11(Sat) 22:30:00
-  %p.message__text 壁にぶち当たりましたaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaao
+  .upper-message
+    .message__user
+      = message.user.name
+    .message__date
+      = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
+  .lower-message
+    - if message.content.present?
+      %p.message__text
+        = message.content
+    = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
